@startuml HRMS Database ERD
!theme plain
title HRMS - Entity Relationship Diagram

!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define PK(x) <b><color:#b8861b><&key></color> x</b>
!define FK(x) <color:#aaaaaa><&key></color> x
!define COLUMN(x) <color:#aaaaa0> x</color>

package "MySQL Database" {
    TABLE(employees, "employees") {
        PK(id) : BIGINT AUTO_INCREMENT
        COLUMN(name) : VARCHAR(100) NOT NULL
        COLUMN(email) : VARCHAR(100) UNIQUE NOT NULL
        COLUMN(department_id) : BIGINT NOT NULL
        COLUMN(salary) : DECIMAL(10,2) NOT NULL
        COLUMN(join_date) : DATE NOT NULL
        COLUMN(created_at) : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
        COLUMN(updated_at) : TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
    }

    TABLE(departments, "departments") {
        PK(id) : BIGINT AUTO_INCREMENT
        COLUMN(name) : VARCHAR(50) NOT NULL
        COLUMN(allowance_rate) : DECIMAL(5,4) DEFAULT 0.0000
        COLUMN(deduction_rate) : DECIMAL(5,4) DEFAULT 0.0000
        COLUMN(created_at) : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
    }

    TABLE(payroll, "payroll") {
        PK(id) : BIGINT AUTO_INCREMENT
        FK(employee_id) : BIGINT NOT NULL
        COLUMN(month) : VARCHAR(7) NOT NULL
        COLUMN(basic_salary) : DECIMAL(10,2) NOT NULL
        COLUMN(allowances) : DECIMAL(10,2) DEFAULT 0.00
        COLUMN(deductions) : DECIMAL(10,2) DEFAULT 0.00
        COLUMN(overtime) : DECIMAL(10,2) DEFAULT 0.00
        COLUMN(total) : DECIMAL(10,2) NOT NULL
        COLUMN(created_at) : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
    }

    TABLE(attendance, "attendance") {
        PK(id) : BIGINT AUTO_INCREMENT
        FK(employee_id) : BIGINT NOT NULL
        COLUMN(date) : DATE NOT NULL
        COLUMN(check_in) : TIME NOT NULL
        COLUMN(check_out) : TIME
        COLUMN(hours_worked) : DECIMAL(4,2) DEFAULT 0.00
        COLUMN(created_at) : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
    }
}

package "DynamoDB Tables" {
    TABLE(dynamo_employees, "Employees (DynamoDB)") {
        PK(id) : String (Hash Key)
        COLUMN(name) : String
        COLUMN(email) : String
        COLUMN(departmentId) : String
        COLUMN(salary) : Number
        COLUMN(joinDate) : String (ISO Date)
    }

    TABLE(dynamo_payroll, "Payroll (DynamoDB)") {
        PK(id) : String (Hash Key)
        COLUMN(employeeId) : String
        COLUMN(month) : String
        COLUMN(basicSalary) : Number
        COLUMN(allowances) : Number
        COLUMN(deductions) : Number
        COLUMN(overtime) : Number
        COLUMN(total) : Number
    }

    TABLE(dynamo_leave, "LeaveRequests (DynamoDB)") {
        PK(id) : String (Hash Key)
        COLUMN(employeeId) : Number
        COLUMN(leaveType) : String
        COLUMN(startDate) : String (ISO Date)
        COLUMN(endDate) : String (ISO Date)
        COLUMN(reason) : String
        COLUMN(status) : String
    }
}

' Relationships - MySQL
employees ||--o{ payroll : "has many"
employees ||--o{ attendance : "has many"
departments ||--o{ employees : "contains"

' Relationships - DynamoDB (logical)
dynamo_employees ||--o{ dynamo_payroll : "has many"
dynamo_employees ||--o{ dynamo_leave : "has many"

' Cross-database relationships (application level)
employees }|--|| dynamo_employees : "synchronized"
payroll }|--|| dynamo_payroll : "synchronized"

note right of employees : "Primary employee data\nwith relational integrity"
note right of dynamo_employees : "Scalable employee storage\nfor high-volume operations"
note right of attendance : "Time tracking with\nprecise timestamps"
note right of dynamo_leave : "Document-based\nleave management"

@enduml